# AlphaCode

./: .env.example  .gitignore  README.md  config.py  config.yaml  pyproject.toml
.alphacode/sessions/47a2d1db/: conversation.json  metadata.json
.alphacode/sessions/de4237ae/: conversation.json  metadata.json  tool_calls.json
alphacode/: __init__.py  cli.py  config.py
alphacode/agent/: __init__.py  base.py  code.py  conversation.py  prompts.py  unified.py
alphacode/core/: __init__.py  agent.py  controller.py  node.py  progressive_mcts.py  tree.py
alphacode/evaluation/: __init__.py  evaluator.py
alphacode/llm/: __init__.py  client.py  entropy.py  intent.py  optimized_client.py  prompts.py  smart_cache.py
alphacode/mcts/: __init__.py  evaluator.py  expander.py  selector.py
alphacode/search/: __init__.py  expander.py  selector.py
alphacode/state/: __init__.py  dual_git_manager.py  git_manager.py  session_manager.py
alphacode/tools/: __init__.py  executor.py  mcts_tool.py
alphacode/utils/: __init__.py  display.py  streaming_display.py
docs/: architecture-analysis.md  autonomous-mcts-design.md
examples/: basic_usage.py
tests/: test_basic.py
